--- a/hexagon_dance/css/stylesheet.css
+++ b/hexagon_dance/css/stylesheet.css
@@ -7,14 +7,13 @@
 }
 
 body {
-	background-color: var(--main-bg-color);
+	background-color: rgb(255,253,208);
 	color: var(--text-color);
 }
 
 canvas {
 	display: block;
 	margin: auto;
-	border: 1pt solid black;
 	background-color: rgb(0,0,0);
 	padding: 0;
 }
